--- a/Dido_Store_2/DidoStore.csproj
+++ b/Dido_Store_2/DidoStore.csproj
@@ -57,7 +57,6 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
-
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
     </Reference>
@@ -84,7 +83,6 @@
     </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
-
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -188,7 +186,8 @@
     <Content Include="Assets\admin\data\morris-data.js" />
     <Content Include="Assets\admin\dist\css\sb-admin-2.css" />
     <Content Include="Assets\admin\dist\css\sb-admin-2.min.css" />
-    <Content Include="Assets\admin\dist\js\controller\UserController.js" />
+    <Content Include="Assets\admin\dist\js\controller\branchController.js" />
+    <Content Include="Assets\admin\dist\js\controller\productController.js" />
     <Content Include="Assets\admin\dist\js\plugins\ckfinder\changelog.txt" />
     <Content Include="Assets\admin\dist\js\plugins\ckfinder\ckfinder.html" />
     <Content Include="Assets\admin\dist\js\plugins\ckfinder\ckfinder.js" />
@@ -933,6 +932,7 @@
     <Content Include="Assets\client\images\feature-pic4.jpg" />
     <Content Include="Assets\client\images\linkedin.png" />
     <Content Include="Assets\client\images\list-img.png" />
+    <Content Include="Assets\client\images\logo.jpg" />
     <Content Include="Assets\client\images\logo.png" />
     <Content Include="Assets\client\images\new-pic1.jpg" />
     <Content Include="Assets\client\images\new-pic2.jpg" />
@@ -1077,6 +1077,7 @@
     <Content Include="Content\bootstrap-grid.css.map" />
     <Content Include="Assets\client\font\Amble-Regular-webfont.ttf" />
     <Content Include="Assets\client\images\Thumbs.db" />
+    <Content Include="Areas\Admin\Views\Home\Index.cshtml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -1090,11 +1091,9 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
-
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
-
     <Content Include="Scripts\popper-utils.js" />
     <Content Include="Scripts\popper-utils.min.js" />
     <Content Include="Scripts\popper.js" />
