--- a/Dido_Store_2/DidoStore.csproj
+++ b/Dido_Store_2/DidoStore.csproj
@@ -904,10 +904,13 @@
     <Content Include="Assets\admin\vendor\morrisjs\morris.min.js" />
     <Content Include="Assets\admin\vendor\raphael\raphael.js" />
     <Content Include="Assets\admin\vendor\raphael\raphael.min.js" />
+    <Content Include="Assets\client\css\bootstrap.min.css" />
     <Content Include="Assets\client\css\easy-responsive-tabs.css" />
+    <Content Include="Assets\client\css\font-awesome.min.css" />
     <Content Include="Assets\client\css\global.css" />
     <Content Include="Assets\client\css\slider.css" />
     <Content Include="Assets\client\css\style.css" />
+    <Content Include="Assets\client\fonts\fontawesome-webfont.svg" />
     <Content Include="Assets\client\images\about_img.jpg" />
     <Content Include="Assets\client\images\arrow-next.png" />
     <Content Include="Assets\client\images\arrow-prev.png" />
@@ -1070,6 +1073,39 @@
     <Content Include="Content\bootstrap-grid.css.map" />
     <Content Include="Assets\client\font\Amble-Regular-webfont.ttf" />
     <Content Include="Assets\client\images\Thumbs.db" />
+    <Content Include="Assets\client\fonts\fontawesome-webfont.eot" />
+    <Content Include="Assets\client\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Assets\client\fonts\fontawesome-webfont.woff" />
+    <Content Include="Assets\client\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Assets\client\fonts\FontAwesome.otf" />
+    <Content Include="Assets\client\less\animated.less" />
+    <Content Include="Assets\client\less\bordered-pulled.less" />
+    <Content Include="Assets\client\less\core.less" />
+    <Content Include="Assets\client\less\fixed-width.less" />
+    <Content Include="Assets\client\less\font-awesome.less" />
+    <Content Include="Assets\client\less\icons.less" />
+    <Content Include="Assets\client\less\larger.less" />
+    <Content Include="Assets\client\less\list.less" />
+    <Content Include="Assets\client\less\mixins.less" />
+    <Content Include="Assets\client\less\path.less" />
+    <Content Include="Assets\client\less\rotated-flipped.less" />
+    <Content Include="Assets\client\less\screen-reader.less" />
+    <Content Include="Assets\client\less\stacked.less" />
+    <Content Include="Assets\client\less\variables.less" />
+    <Content Include="Assets\client\scss\font-awesome.scss" />
+    <Content Include="Assets\client\scss\_animated.scss" />
+    <Content Include="Assets\client\scss\_bordered-pulled.scss" />
+    <Content Include="Assets\client\scss\_core.scss" />
+    <Content Include="Assets\client\scss\_fixed-width.scss" />
+    <Content Include="Assets\client\scss\_icons.scss" />
+    <Content Include="Assets\client\scss\_larger.scss" />
+    <Content Include="Assets\client\scss\_list.scss" />
+    <Content Include="Assets\client\scss\_mixins.scss" />
+    <Content Include="Assets\client\scss\_path.scss" />
+    <Content Include="Assets\client\scss\_rotated-flipped.scss" />
+    <Content Include="Assets\client\scss\_screen-reader.scss" />
+    <Content Include="Assets\client\scss\_stacked.scss" />
+    <Content Include="Assets\client\scss\_variables.scss" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
