--- a/Dido_Store_2/packages.config
+++ b/Dido_Store_2/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
   <package id="bootstrap" version="4.1.3" targetFramework="net46" />
+  <package id="Captcha" version="4.4.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
   <package id="jQuery" version="3.3.1" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net46" />
@@ -26,6 +27,7 @@
   <package id="PagedList" version="1.17.0.0" targetFramework="net46" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net46" />
   <package id="popper.js" version="1.14.0" targetFramework="net46" />
+  <package id="System.Data.SQLite.Core" version="1.0.109.1" targetFramework="net46" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net46" />
   <package id="WebGrease" version="1.6.0" targetFramework="net46" />
 </packages>
