--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -72,6 +72,7 @@
     <Compile Include="EF\Role.cs" />
     <Compile Include="EF\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\ProductViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\PagedList.css" />
