--- a/Dido_Store_2/DidoStore.csproj
+++ b/Dido_Store_2/DidoStore.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Areas\Admin\Controllers\BranchController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\LoginController.cs" />
+    <Compile Include="Areas\Admin\Controllers\OrderController.cs" />
     <Compile Include="Areas\Admin\Controllers\ProductController.cs" />
     <Compile Include="Areas\Admin\Controllers\UserController.cs" />
     <Compile Include="Areas\Admin\Models\LoginModel.cs" />
@@ -203,6 +204,7 @@
     <Content Include="Assets\admin\dist\css\sb-admin-2.css" />
     <Content Include="Assets\admin\dist\css\sb-admin-2.min.css" />
     <Content Include="Assets\admin\dist\js\controller\branchController.js" />
+    <Content Include="Assets\admin\dist\js\controller\orderController.js" />
     <Content Include="Assets\admin\dist\js\controller\productController.js" />
     <Content Include="Assets\admin\dist\js\plugins\ckfinder\changelog.txt" />
     <Content Include="Assets\admin\dist\js\plugins\ckfinder\ckfinder.html" />
@@ -1139,6 +1141,7 @@
     <Content Include="Assets\client\scss\_stacked.scss" />
     <Content Include="Assets\client\scss\_variables.scss" />
     <Content Include="Assets\client\font\Cabin-Regular.ttf" />
+    <Content Include="Areas\Admin\Views\Order\Index.cshtml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
