--- a/Dido_Store_2/Web.config
+++ b/Dido_Store_2/Web.config
@@ -18,13 +18,13 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--Email config-->
-    <add key="FromEmailAddress" value="toanbn@esvn.com.vn" />
+    <add key="FromEmailAddress" value="mquan129dalat@gmail.com" />
     <add key="FromEmailDisplayName" value="Đơn hàng mới" />
-    <add key="FromEmailPassword" value="xxxxxx" />
+    <add key="FromEmailPassword" value="ntmquan198" />
     <add key="SMTPHost" value="smtp.gmail.com" />
     <add key="SMTPPort" value="587" />
     <add key="EnabledSSL" value="true" />
-    <add key="ToEmailAddress" value="mquan129dalat@gmail.com" />
+    <add key="ToEmailAddress" value="quanntmse63112@fpt.edu.vn" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
@@ -110,7 +110,7 @@
     </handlers>
   </system.webServer>
   <connectionStrings>
-    <add name="DidoStoreDbContext" connectionString="data source=.;initial catalog=DidoStoreDemo;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DidoStoreDbContext" connectionString="data source=.;initial catalog=DidoStoreDemo;user id=sa;password=120998;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
