--- a/Dido_Store_2/Areas/Admin/Views/web.config
+++ b/Dido_Store_2/Areas/Admin/Views/web.config
@@ -26,6 +26,10 @@
   <appSettings>
     <add key="webpages:Enabled" value="false" />
   </appSettings>
+  
+  <system.web>  
+    <sessionState timeout="60"></sessionState>  
+</system.web>  
 
   <system.webServer>
     <handlers>
